# ai-cs-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  litellm_config.yaml  project.yml  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml
app/: logging_config.py  main.py
app/clients/: embedding.py  http.py  inquiry_logs.py  llm.py  supabase.py  usage.py
app/graph/: edges.py  graph.py  guideline.json  nodes.py  prompts.py  state.py
app/privacy/: __init__.py  masking.py
app/rag/: ingest.py  regulations.py  search.py
data/: RAG_operations.py  insert_rag.py  regulations.py
frontend/: admin.html  inquiry.html
frontend/css/: styles.css
frontend/js/: admin.js  api.js  inquiry.js  log.js  mock-data.js
scripts/: embedding_demo.py  evaluate_ragas.py  llm_demo.py
supabase/: inquiry_logs.sql
tests/: conftest.py  test_embed.py  test_graph_logging.py  test_ingest.py  test_inquiry_logs.py  test_llm.py  test_llm_demo.py  test_main.py  test_masking.py  test_prompts.py  test_rag_operations.py  test_regulations.py  test_state.py
