[project]
name = "ai-cs-helper"
version = "0.1.0"
description = "AI customer support helper MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
